# ChangeLog for sci-physics/geant-vmc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Mar 2014; Oliver Freyermuth <o.freyermuth@googlemail.com>
  geant-vmc-3.1.15a.ebuild, geant-vmc-4.2.14b.ebuild, geant-vmc-4.2.15.ebuild:
  Add subslot-dependency on sci-physics/root, rebuilding is needed on each ROOT
  version string change. For more details c.f. #505358 .

  02 Feb 2014; <o.freyermuth@googlemail.com> geant-vmc-4.2.14b.ebuild,
  geant-vmc-4.2.15.ebuild:
  Make header installation work again, include/ contains folders only so
  doheader must recurse

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> geant-vmc-4.2.14b.ebuild,
  geant-vmc-4.2.15.ebuild, metadata.xml:
  Add missing die

*geant-vmc-4.2.15 (06 Jan 2014)

  06 Jan 2014; <o.freyermuth@googlemail.com> geant-vmc-4.2.14b.ebuild,
  +geant-vmc-4.2.15.ebuild:
  Version bump to 2.15 which builds with Geant 4.10.00 (note #360287 and
  #496678), make 2.14b DEPEND on <sci-physics/geant-4.10.00 . 

*geant-vmc-4.2.14b (26 Nov 2013)

  26 Nov 2013; Sébastien Fabbro <bicatali@gentoo.org> +geant-vmc-4.2.14b.ebuild,
  -geant-vmc-4.2.14a.ebuild:
  sci-physics/geant-vmc: Version bump

*geant-vmc-3.1.15a (05 Jun 2013)
*geant-vmc-4.2.14a (05 Jun 2013)

  05 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org> +geant-vmc-3.1.15a.ebuild,
  +geant-vmc-4.2.14a.ebuild, -geant-vmc-3.1.14.ebuild, -geant-vmc-4.2.14.ebuild:
  sci-physics/geant-vmc: Version bumps

  21 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> geant-vmc-4.2.14.ebuild:
  sci-physics/geant-vmc: source geant4 shell script before compiling

*geant-vmc-3.1.14 (18 Jan 2013)
*geant-vmc-4.2.14 (18 Jan 2013)

  18 Jan 2013; Sébastien Fabbro <bicatali@gentoo.org> +geant-vmc-3.1.14.ebuild,
  +geant-vmc-4.2.14.ebuild, +metadata.xml:
  sci-physics/geant-vmc: Initial import